--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            # Выполняет pull образа с DockerHub
+            # Выполняет pull нужного образа с DockerHub
             sudo docker pull yan4ik1994/my_infra_actions
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
